Add basic custom titlebar functionality

--- a/tjc-powerpoint/src/templates/index.html
+++ b/tjc-powerpoint/src/templates/index.html
@@ -1,12 +1,22 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>True Jesus Church PowerPoint</title>
+  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="index.css" />
+</head>
+<body>
+  <!-- The title bar content will be injected here -->
+  <div id="title-bar-container"></div>
+  
+  <p>Welcome to your Electron application.</p>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../scripts/renderer.js"></script>
+</body>
 </html>
