--- a/tjc-powerpoint/src/templates/index.css
+++ b/tjc-powerpoint/src/templates/index.css
@@ -1,7 +1,18 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 }
+
+.title-bar {
+  height: 3rem;
+  -webkit-user-select: none;
+  -webkit-app-region: drag;
+}
+
+.title-bar-button {
+  -webkit-app-region: no-drag;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 1.3rem;
+}
+
