Add jest framework

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,22 +1,12 @@
-<!-- index.html -->
+<!-- Index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>True Jesus Church PowerPoint</title>
-  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-  <!-- The title bar content will be injected here -->
-  <div id="title-bar-container"></div>
-  
   <p>Welcome to your Electron application.</p>
 
-
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="../scripts/renderer.js"></script>
 </body>
 </html>
