Add prettier formatter

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,11 @@
 <!-- Index.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>True Jesus Church PowerPoint</title>
-</head>
-<body>
-  <p>Welcome to your Electron application.</p>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>True Jesus Church PowerPoint</title>
+  </head>
+  <body>
+    <p>Welcome to your Electron application.</p>
+  </body>
 </html>
