--- a/src/templates/nav_bar.html
+++ b/src/templates/nav_bar.html
@@ -1,19 +1,23 @@
 <nav class="navbar navbar-expand-lg title-bar">
-    <div class="container-fluid">
-      <a class="navbar-brand navbar-header">
-        <img src="../assets/tjcpowerpointlogo.svg" width="100%" height="100%" alt="">
-      </a>
-      
-      <!-- Custom buttons for window control -->
-      <div class="window-buttons d-flex align-items-center">
-        <button id="minimizeBtn"class="button title-bar-button minimize">
-          <span class="bi bi-dash"></span>
-        </button>
-        
-        <button id="closeBtn" class="button title-bar-button close">
-          <span class="bi bi-x"></span>
-        </button>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand navbar-header">
+      <img
+        src="../assets/tjcpowerpointlogo.svg"
+        width="100%"
+        height="100%"
+        alt=""
+      />
+    </a>
+
+    <!-- Custom buttons for window control -->
+    <div class="window-buttons d-flex align-items-center">
+      <button id="minimizeBtn" class="button title-bar-button minimize">
+        <span class="bi bi-dash"></span>
+      </button>
+
+      <button id="closeBtn" class="button title-bar-button close">
+        <span class="bi bi-x"></span>
+      </button>
     </div>
+  </div>
 </nav>
-  
