Add flowbite js

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <p>Welcome to your Electron application.</p>
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
