Add tailwind config and flowbite

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>True Jesus Church PowerPoint</title>
+    <link href="../output.css" rel="stylesheet">
   </head>
   <body>
-    <p>Welcome to your Electron application.</p>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <p class="text-white" >Welcome to your Electron application.</p>
+    
   </body>
 </html>
